2010-09-01  Sergio Martin <sergio.martin@artica.es>

	* operation/menu.php
	operation/events/events_rss.php: Added url parameters
	to the event rss to authenticate the user and fix the ACLs

2010-09-01  Sergio Martin <sergio.martin@artica.es>

	* operation/agentes/alerts_status.php
	operation/search_alerts.php: Fixed the search of 
	alerts in alerts view and in main search

2010-08-31  Sergio Martin <sergio.martin@artica.es>

	* operation/events/export_csv.php: Fixed ACLs to avoid
	to export system events to not administrators for bug 
	3053486

2010-08-31  Raúl Mateos   <raulofpandora@gmail.com>

	* godmode/reporting/reporting_builder.php,
	godmode/gis_maps/configure_gis_mao.php, include/functions_filemanager.php:
	Fixed some misspelled strings

2010-08-31  Sergio Martin <sergio.martin@artica.es>

	* operation/agentes/status_monitor.php: Fixed the 
	modules combo in the status monitor screen to 
	show only the visible agents modules

2010-08-31  Sergio Martin <sergio.martin@artica.es>

	* include/functions_db.php: Added support to '<>'
	comparation in the format_array_to_where_clause_sql
	function

2010-08-31  Sergio Martin <sergio.martin@artica.es>

	* operation/agentes/networkmap.php: Fixed the groups
	combo into the options of networkmaps to show only
	visible groups

2010-08-31  Sergio Martin <sergio.martin@artica.es>

	* extensions/update_manager.php: Removed the update
	manager extension from the menu if the user
	doesnt have PM permissions

2010-08-31  Sergio Martin <sergio.martin@artica.es>

	* extensions/users_connected.php: Clean code and added
	additional ACL condition

2010-08-31  Sergio Martin <sergio.martin@artica.es>

	* operation/search_reports.php: Added the description
	field to the reports search in the main menu

2010-08-31  Sergio Martin <sergio.martin@artica.es>

	* operation/search_maps.php: Fixed the group icon
	in the maps search view

2010-08-31  Sergio Martin <sergio.martin@artica.es>
