@@ -34,7 +34,8 @@ $option = (string) get_parameter ('option', '');
 
 
 $options_alerts = array('add_alerts' => __('Massive alerts addition'), 'delete_alerts' => __('Massive alerts deletion'), 
-			'add_action_alerts' => __('Massive alert actions addition'), 'delete_action_alerts' => __('Massive alert actions deletion'));
+			'add_action_alerts' => __('Massive alert actions addition'), 'delete_action_alerts' => __('Massive alert actions deletion'),
+			'enable_disable_alerts' => __('Massive alert enable/disable'));
 			
 $options_agents = array('delete_agents' => __('Massive agents deletion'));
 
@@ -132,6 +133,9 @@ switch ($option) {
 		break;
 	case 'add_action_alerts':
 		require_once ('godmode/massive/massive_add_action_alerts.php');
+		break;
+	case 'enable_disable_alerts':
+		require_once ('godmode/massive/massive_enable_disable_alerts.php');
 		break;
 	case 'delete_agents':
 		require_once ('godmode/massive/massive_delete_agents.php');
