@@ -1,3 +1,9 @@
+2010-09-02  Sergio Martin <sergio.martin@artica.es>
+
+	* godmode/massive/massive_operations.php
+	godmode/massive/massive_enable_disable_alerts.php: Added
+	the disable/enable alerts massive operation
+
 2010-09-01  Sergio Martin <sergio.martin@artica.es>
 
 	* operation/menu.php
